# 42_python_module

module00/ex00/: answers.txt  requirements.txt
module00/ex01/: exec.py
module00/ex02/: whois.py
module00/ex03/: count.py
module00/ex04/: operations.py
module00/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
module00/ex06/: recipe.py
module00/ex07/: filterwords.py
module00/ex08/: sos.py
module00/ex09/: guess.py
module00/ex10/: loading.py
module01/ex00/: book.py  recipe.py  test.py
module01/ex01/: game.py
module01/ex02/: test.py  vector.py
module01/ex03/: generator.py
module01/ex04/: eval.py
module01/ex05/: the_bank.py
piscine/day00/ex00/: Hello.py
piscine/day00/ex01/: format_ft_time.py
piscine/day00/ex02/: find_ft_type.py
piscine/day00/ex03/: NULL_not_found.py
piscine/day00/ex04/: whatis.py
piscine/day00/ex05/: building.py
piscine/day00/ex06/: filterstring.py  ft_filter.py
piscine/day00/ex07/: sos.py
piscine/day00/ex08/: Loading.py
piscine/day00/ex09/: README.md  ft_package_mrakhman.py  pyproject.toml  test.py
piscine/day01/ex00/: give_bmi.py
piscine/day01/ex01/: array2D.py
piscine/day01/ex02/: load_image.py
piscine/day01/ex03/: load_image.py  zoom.py
piscine/day01/ex04/: load_image.py  rotate.py
piscine/day01/ex05/: load_image.py  pimp_image.py
piscine/day02/ex00/: load_csv.py
piscine/day02/ex01/: aff_life.py  load_csv.py
piscine/day02/ex02/: aff_pop.py  load_csv.py
piscine/day02/ex03/: projection_life.py
piscine/day03/ex00/: S1E9.py
piscine/day03/ex01/: S1E1.py  S1E7.py  S1E9.py
(+8 files in other folders)
