[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ft_package_mrakhman"
version = "0.0.1"
authors = [
  { name="Maria Rakhman", email="mrakhman@student.42.fr" },
]
description = "42 school python project"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
